fixes dark mode errors

--- a/src/components/SearchChips/styles.module.scss
+++ b/src/components/SearchChips/styles.module.scss
@@ -17,7 +17,7 @@
         cursor: pointer;
         user-select: none;
         -webkit-user-select: none;
-        color: var(--background-4);
+        color: var(--foreground-1);
         transition: 0.2s ease-in-out;
     }
 
